    - Use export EZC_DEG=1 to use degrees in all trig functions
    - Use export EZC_DEG=0 to use continue using radians
    - If you set nothing, it defaults to radian mode
  * added simple expansion
    - You can wrap functions into other functions.
	- Used like sqrt (add 2 3)
  * bug fixes
    - fixed echo print bug where two newlines were printed

 -- Cade Brown <info@chemicaldevelopment.us>  Tue, 13 Dec 2016 16:07:00 -0500

ezc (2.6.0) testing; urgency=low

  * added utils
    - all common functions implemented
  * updated accuracy
    - programs set num digits to largest argument
	  called to set precision doesnt exit

 -- Cade Brown <info@chemicaldevelopment.us>  Mon, 12 Dec 2016 23:40:00 -0500

ezc (2.5.0) stable; urgency=low

  * fixed error print on commandline
    - when using the c option, the compiler would give an error
  * changed build system
    - now copies in python files instead of compiling to executable
  * added utils
    - pi, e, and sqrt are utilities contained

 -- Cade Brown <info@chemicaldevelopment.us>  Mon, 12 Dec 2016 18:20:00 -0500

ezc (2.3.0) stable; urgency=high

  * fixed memory leaks
    - changed default number of constants. This can be set with cvars option
    - changed how we allocate constants so there is no seg fault
  * added many more functions
    - improved calling interface
  * changed logging
    - more pleasing colors, and style with bold, and etc

 -- Cade Brown <info@chemicaldevelopment.us>  Wed, 23 Nov 2016 16:00:00 -0500

ezc (2.2.0) stable; urgency=med

  * added compiler options to control removing files
    - rem and remexec
  * changed default tmp directory to /tmp/
    - you can still set it with tmpd

 -- Cade Brown <info@chemicaldevelopment.us>  Sun, 20 Nov 2016 19:39:15 -0500

ezc (2.1.5-16ubuntu8) stable; urgency=med

  * changed library structure
    - split libMath into libMath and libTrig
    - split libBasic into libBasic and libPrint
  * added many more functions